--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="textColor">#353535</color>
+    <color name="textColor2">#4A4A4A</color>
     <color name="white">#EEEEEE</color>
 </resources>
