--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#106898</color>
+    <color name="colorPrimaryDark">#0C5075</color>
+    <color name="colorAccent">#2B2B2B</color>
     <color name="textColor">#353535</color>
     <color name="textColor2">#4A4A4A</color>
     <color name="white">#EEEEEE</color>
