Adding comments and changed icon

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#106898</color>
     <color name="colorPrimaryDark">#0C5075</color>
-    <color name="colorAccent">#2B2B2B</color>
+    <color name="colorAccent">#005887</color>
     <color name="textColor">#353535</color>
     <color name="textColor2">#4A4A4A</color>
     <color name="white">#EEEEEE</color>
